add review handler
